--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "server": "nodemon --watch server -e js,html server/index.js",
-    "less": "less-watch-compiler src/style src index.less"
+    "less": "less-watch-compiler src/style src index.less",
+    "seed": "node db/seed.js"
   },
   "dependencies": {
     "@prisma/client": "^5.3.0",
@@ -28,6 +29,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.1.0",
     "@vitejs/plugin-react": "^1.0.7",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.15",
