--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "redux": "^4.2.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vite-express": "^0.10.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.1.0",
