--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "less-watch-compiler": "^1.16.3",
     "pg": "^8.11.3",
     "prisma": "^5.2.0",
+    "rc-slider": "^10.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.16.0",
     "redux": "^4.2.1",
     "uuid": "^9.0.1",
     "vite-express": "^0.10.0"
