--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "redux": "^4.2.1",
+    "us-state-codes": "^1.1.2",
     "uuid": "^9.0.1",
     "vite-express": "^0.10.0"
   },
