Updated seed file with products

--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "preview": "vite preview",
     "server": "nodemon --watch server -e js,html server/index.js",
     "less": "less-watch-compiler src/style src index.less",
-    "seed": "node db/seed.js"
+    "seed": "node db/seed.js",
+    "csv": "node ../assets/Canned_Air_Products.csv"
   },
   "dependencies": {
     "@prisma/client": "^5.3.0",
     "@reduxjs/toolkit": "^1.9.5",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "express": "^4.17.3",
     "jsonwebtoken": "^9.0.2",
     "less-watch-compiler": "^1.16.3",
